--- a/resources/meson.build
+++ b/resources/meson.build
@@ -3,7 +3,7 @@ resources_files += files(
 	'document.ico',
 )
 
-if copt_platform == 'win'
+if host_platform == 'windows'
 	powder_files += windows_mod.compile_resources(
 		'powder-res.rc',
 		depend_files: [ resources_files, 'resource.h' ],
