--- a/meson_options.txt
+++ b/meson_options.txt
@@ -129,3 +129,39 @@ option(
 	value: 'androidkey',
 	description: 'Signing key alias for signing an APK, only used for Android development'
 )
+option(
+	'app_name',
+	type: 'string',
+	value: 'The Powder Toy',
+	description: 'App name, used for desktop integration and the window title, change if you work on a mod'
+)
+option(
+	'app_comment',
+	type: 'string',
+	value: 'Physics sandbox game',
+	description: 'App comment, used for desktop integration, change if you work on a mod'
+)
+option(
+	'app_exe',
+	type: 'string',
+	value: 'powder',
+	description: 'App executable name, used for desktop integration, change if you work on a mod'
+)
+option(
+	'app_id',
+	type: 'string',
+	value: 'uk.co.powdertoy.tpt',
+	description: 'App ID, a D-Bus well-known name, used for desktop integration, change if you work on a mod'
+)
+option(
+	'app_data',
+	type: 'string',
+	value: 'The Powder Toy',
+	description: 'App data directory name, do not change even if you work on a mod, only if you know what you are doing'
+)
+option(
+	'app_vendor',
+	type: 'string',
+	value: 'powdertoy',
+	description: 'App vendor prefix, used for desktop integration, do not change even if you work on a mod, only if you know what you are doing'
+)
