--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -59,11 +59,11 @@ jobs:
       - if: matrix.bsh_build_platform == 'darwin'
         run: brew install pkg-config coreutils binutils bash
       - if: matrix.bsh_build_platform == 'darwin' && matrix.bsh_static_dynamic != 'static'
-        run: brew install luajit curl fftw zlib sdl2
+        run: brew install luajit curl fftw zlib sdl2 bzip2 jsoncpp
       - if: matrix.bsh_build_platform == 'linux' && matrix.bsh_host_libc == 'mingw'
         run: sudo apt update && sudo apt install g++-mingw-w64-x86-64
       - if: matrix.bsh_build_platform == 'linux' && matrix.bsh_static_dynamic != 'static'
-        run: sudo apt update && sudo apt install libluajit-5.1-dev libcurl4-openssl-dev libfftw3-dev zlib1g-dev libsdl2-dev
+        run: sudo apt update && sudo apt install libluajit-5.1-dev libcurl4-openssl-dev libfftw3-dev zlib1g-dev libsdl2-dev libbz2-dev libjsoncpp-dev
       - if: matrix.bsh_build_platform == 'linux' && matrix.bsh_static_dynamic == 'static'
         run: sudo apt update && sudo apt install libc6-dev libc6-dev-i386
       - run: bash -c './.github/build.sh'
