--- a/android/res/meson.build
+++ b/android/res/meson.build
@@ -1,7 +1,7 @@
 android_resources = files(
-	'mipmap-mdpi/ic_launcher.png',
 	'values/colors.xml',
 	'values/styles.xml',
 )
 
 subdir('values')
+subdir('mipmap-mdpi')
